Add swagger doc for Auth and Reg Method
